# monorepo-go

./: .bazelrc  .cz.toml  .gitignore  .gitmodules  .golangci.yml  BUILD.bazel  CNAME  MODULE.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  index.yaml  shortenurl-api-0.1.0.tgz
.github/workflows/: go.yaml  go.yml  golangci-lint.yml  helm.yaml  release.yaml
adapter/: README.md
adapter/ekko/: BUILD.bazel  README.md  main.go  serverless.yml
adapter/ekko/api/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
adapter/ekko/cmd/: BUILD.bazel  root.go  start.go
adapter/ekko/cmd/lambda/: BUILD.bazel  main.go
adapter/ekko/cmd/restful/: BUILD.bazel  impl.go  wire.go  wire_gen.go
adapter/ekko/docs/: ddd.md
adapter/orianna/: .gitignore  BUILD.bazel  README.md  main.go  package-lock.json  serverless.yml
adapter/orianna/api/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
adapter/orianna/cmd/: BUILD.bazel  root.go  start.go
adapter/orianna/cmd/bot/: BUILD.bazel  impl.go  wire.go  wire_gen.go
adapter/orianna/cmd/consumer/: BUILD.bazel  impl.go  wire.go  wire_gen.go
adapter/orianna/cmd/jobs/calcLongUp/: BUILD.bazel  main.go  wire_gen.go
adapter/orianna/cmd/jobs/fetchEarningsCall/: BUILD.bazel  main.go  wire.go  wire_gen.go
adapter/orianna/cmd/jobs/taiwanDailyQuota/: BUILD.bazel  main.go  model.go  wire.go  wire_gen.go
adapter/orianna/cmd/jobs/taiwanDailyQuotes/: BUILD.bazel  main.go  model.go  wire.go  wire_gen.go
adapter/orianna/cmd/jobs/taiwanStockInfo/: BUILD.bazel  main.go  wire.go  wire_gen.go
adapter/orianna/cmd/jobs/taiwanStockPrice/: BUILD.bazel  main.go  wire.go  wire_gen.go
adapter/orianna/cmd/lambda/: BUILD.bazel  main.go
adapter/orianna/cmd/restful/: BUILD.bazel  impl.go  wire.go  wire_gen.go
adapter/orianna/cmd/restful/v1/: BUILD.bazel  api.go
adapter/orianna/cmd/restful/v1/stats/: BUILD.bazel  api.go
adapter/orianna/cmd/restful/v1/stocks/: BUILD.bazel  api.go  get_list.go  get_symbol.go
adapter/orianna/cmd/taiwanStockInfo/: BUILD.bazel  main.go
adapter/orianna/docs/: ddd.md
adapter/redpacket/: BUILD.bazel  main.go
adapter/redpacket/api/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
adapter/redpacket/cmd/: BUILD.bazel  root.go  start.go
adapter/redpacket/cmd/cronjob/: BUILD.bazel  impl.go  wire.go  wire_gen.go
adapter/redpacket/cmd/restful/: BUILD.bazel  impl.go  impl_external_test.go  wire.go  wire_gen.go
adapter/redpacket/cmd/restful/v1/: BUILD.bazel  api.go
adapter/redpacket/cmd/restful/v1/redpackets/: BUILD.bazel  api.go  get_list.go  post.go
adapter/reurl/: BUILD.bazel  main.go  package-lock.json  package.json  serverless.yml
adapter/reurl/api/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
adapter/reurl/cmd/: BUILD.bazel  info.go  root.go  start.go
adapter/reurl/cmd/hello/: BUILD.bazel
adapter/reurl/cmd/lambda/: BUILD.bazel  main.go
adapter/reurl/cmd/restful/: BUILD.bazel  impl.go  main.go  main_external_test.go  wire.go  wire_gen.go
adapter/reurl/cmd/world/: BUILD.bazel
adapter/reurl/hello/: BUILD.bazel
adapter/reurl/world/: BUILD.bazel
adapter/shortenurl/: BUILD.bazel  main.go
adapter/shortenurl/api/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
adapter/shortenurl/cmd/: BUILD.bazel  info.go  root.go  start.go
adapter/shortenurl/cmd/restful/: BUILD.bazel  impl.go  impl_external_test.go  wire.go  wire_gen.go
adapter/shortenurl/cmd/restful/v1/: BUILD.bazel  api.go
adapter/shortenurl/cmd/restful/v1/shorten/: BUILD.bazel  api.go
adapter/sion/: BUILD.bazel  main.go
adapter/sion/api/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
adapter/sion/cmd/: BUILD.bazel  info.go  root.go  start.go
adapter/sion/cmd/restful/: BUILD.bazel  impl.go  wire.go  wire_gen.go
adapter/sion/docs/: ddd.md
adapter/stringx/: BUILD.bazel  main.go
adapter/stringx/api/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
adapter/stringx/cmd/: BUILD.bazel  info.go  root.go  start.go
adapter/stringx/cmd/cronjob/: BUILD.bazel  impl.go  impl_external_test.go  wire.go  wire_gen.go
adapter/stringx/cmd/grpc/: impl.go  wire_gen.go
adapter/stringx/cmd/grpcserver/: BUILD.bazel  impl.go  impl_external_test.go  s2s.go  wire.go  wire_gen.go
adapter/stringx/cmd/grpcserver/s2s/: BUILD.bazel  s2s.go
adapter/stringx/cmd/restful/: BUILD.bazel  impl.go  impl_external_test.go  wire.go  wire_gen.go
adapter/stringx/cmd/restful/v1/: BUILD.bazel  api.go
adapter/stringx/cmd/restful/v1/stringx/: BUILD.bazel  api.go  post_count.go  post_uppercase.go
adapter/user/: main.go
adapter/user/cmd/: root.go  start.go
charts/shortenurl-api/: Chart.yaml  values.yaml
charts/shortenurl-api/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  (+1 more)
docs/: README.md
entity/: README.md
examples/: README.md
internal/: README.md
internal/pkg/cmdx/: BUILD.bazel  cmdx.go
internal/pkg/configx/: BUILD.bazel  configx.go  parse.go
internal/pkg/logx/: BUILD.bazel  logx.go
pb/: README.md
pkg/: README.md
pkg/adapterx/: BUILD.bazel  adapterx.go
pkg/cmdx/: BUILD.bazel  cmdx.go
pkg/configx/: BUILD.bazel  configx.go  parse.go
pkg/contextx/: BUILD.bazel  contextx.go  middleware.go
pkg/finmindx/: BUILD.bazel  client.go  client_external_test.go  interface.go  mock_interface.go  model.go
pkg/linebot/: BUILD.bazel  linebot.go
pkg/logging/: BUILD.bazel  init.go
pkg/netx/: BUILD.bazel  port.go
pkg/notify/: BUILD.bazel  line.go  mock_notifier.go  notifier.go
pkg/randx/: BUILD.bazel  randx.go
pkg/response/: BUILD.bazel  middleware.go  response.go
pkg/storage/influxdb/: BUILD.bazel  influxdb.go
pkg/storage/mongodb/: BUILD.bazel  mongodb.go
pkg/storage/redis/: BUILD.bazel  redis.go
pkg/stringx/: BUILD.bazel  stringx.go
pkg/timex/: BUILD.bazel
pkg/transports/httpx/: BUILD.bazel  server.go
pkg/transports/kafkax/: BUILD.bazel  reader.go  reader_external_test.go  writer.go
pkg/wirex/: BUILD.bazel  injector.go
scripts/: README.md  print-workspace-status.sh
web/: README.md
(+264 files in other folders)
