bazel_dep(name = "rules_oci", version = "1.4.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "alpine",
    image = "docker.io/library/alpine",
    tag = "3",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)

use_repo(oci, "alpine")
