load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ekko_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/monorepo-go/adapter/ekko",
    visibility = ["//visibility:private"],
    deps = ["//adapter/ekko/cmd"],
)

go_binary(
    name = "ekko",
    embed = [":ekko_lib"],
    visibility = ["//visibility:public"],
)
