load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "shortenurl_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/monorepo-go/adapter/shortenurl",
    visibility = ["//visibility:private"],
    deps = ["//adapter/shortenurl/cmd"],
)

go_binary(
    name = "shortenurl",
    embed = [":shortenurl_lib"],
    visibility = ["//visibility:public"],
)

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "tar",
    srcs = [":shortenurl"],
)

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")

oci_image(
    name = "image",
    base = "@alpine",
    entrypoint = ["/shortenurl"],
    tars = [":tar"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["ghcr.io/blackhorseya/shortenurl:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/blackhorseya/shortenurl",
)
