load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sion_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/monorepo-go/adapter/sion",
    visibility = ["//visibility:private"],
    deps = ["//adapter/sion/cmd"],
)

go_binary(
    name = "sion",
    embed = [":sion_lib"],
    visibility = ["//visibility:public"],
)

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "tar",
    srcs = [":sion"],
)

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")

oci_image(
    name = "image",
    base = "@alpine",
    entrypoint = ["/sion"],
    tars = [":tar"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["ghcr.io/blackhorseya/sion:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/blackhorseya/sion",
)
