load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "stringx_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/monorepo-go/adapter/stringx",
    visibility = ["//visibility:private"],
    deps = ["//adapter/stringx/cmd"],
)

go_binary(
    name = "stringx",
    embed = [":stringx_lib"],
    visibility = ["//visibility:public"],
)

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "tar",
    srcs = [":stringx"],
)

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")

oci_image(
    name = "image",
    base = "@alpine",
    entrypoint = ["/stringx"],
    tars = [":tar"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["378881891432.dkr.ecr.ap-northeast-3.amazonaws.com/stringx:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "378881891432.dkr.ecr.ap-northeast-3.amazonaws.com/stringx",
)
