load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "notify",
    srcs = [
        "line.go",
        "mock_notifier.go",
        "notifier.go",
    ],
    importpath = "github.com/blackhorseya/monorepo-go/pkg/notify",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configx",
        "//pkg/contextx",
        "@org_uber_go_mock//gomock",
    ],
)
