load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "start.go",
    ],
    importpath = "github.com/blackhorseya/monorepo-go/adapter/redpacket/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/redpacket/cmd/restful",
        "//internal/pkg/cmdx",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
