load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "world_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/monorepo-go/adapter/reurl/world",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
    ],
)

go_binary(
    name = "world",
    embed = [":world_lib"],
    visibility = ["//visibility:public"],
)
