load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "info.go",
        "root.go",
        "start.go",
    ],
    importpath = "github.com/blackhorseya/monorepo-go/adapter/sion/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/sion/cmd/restful",
        "//pkg/cmdx",
        "//pkg/configx",
        "//pkg/logging",
        "@com_github_spf13_cobra//:cobra",
    ],
)
