load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "influxdb",
    srcs = ["influxdb.go"],
    importpath = "github.com/blackhorseya/monorepo-go/pkg/storage/influxdb",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configx",
        "@com_github_influxcommunity_influxdb3_go//influxdb3",
    ],
)
