load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "redis",
    srcs = ["redis.go"],
    importpath = "github.com/blackhorseya/monorepo-go/pkg/storage/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configx",
        "//pkg/contextx",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go_modules_redis//:redis",
    ],
)
