load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/monorepo-go/adapter/ekko/cmd/restful",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/ekko/api/docs",
        "//app/ekko/domain/workflow/biz",
        "//app/ekko/domain/workflow/repo/mongodb",
        "//entity/ekko/domain/workflow/biz",
        "//pkg/adapterx",
        "//pkg/configx",
        "//pkg/contextx",
        "//pkg/response",
        "//pkg/storage/mongodb",
        "//pkg/transports/httpx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_spf13_viper//:viper",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@org_uber_go_zap//:zap",
    ],
)
