load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/monorepo-go/adapter/orianna/cmd/restful",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/orianna/api/docs",
        "//app/domain/market/biz",
        "//app/domain/market/repo/mongodb",
        "//entity/domain/market/biz",
        "//pkg/adapterx",
        "//pkg/configx",
        "//pkg/contextx",
        "//pkg/finmindx",
        "//pkg/linebot",
        "//pkg/response",
        "//pkg/storage/mongodb",
        "//pkg/transports/httpx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_line_line_bot_sdk_go_v8//linebot",
        "@com_github_spf13_viper//:viper",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@org_uber_go_zap//:zap",
    ],
)

go_library(
    name = "bot",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/monorepo-go/adapter/orianna/cmd/bot",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/orianna/api/docs",
        "//app/domain/market/biz",
        "//app/domain/market/repo/mongodb",
        "//entity/domain/market/biz",
        "//pkg/adapterx",
        "//pkg/configx",
        "//pkg/contextx",
        "//pkg/finmindx",
        "//pkg/linebot",
        "//pkg/response",
        "//pkg/storage/mongodb",
        "//pkg/transports/httpx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_line_line_bot_sdk_go_v8//linebot",
        "@com_github_spf13_viper//:viper",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@org_uber_go_zap//:zap",
    ],
)
