load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "consumer",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/monorepo-go/adapter/orianna/cmd/consumer",
    visibility = ["//visibility:public"],
    deps = [
        "//entity/orianna/domain/market/agg",
        "//pkg/adapterx",
        "//pkg/contextx",
        "//pkg/transports/kafkax",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/lambda",
        "@com_github_segmentio_kafka_go//:kafka-go",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
    ],
)
